# ai-scribe-be

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: mod.rs
src/controllers/: auth_controller.rs  mod.rs  transcription_controller.rs
src/errors/: mod.rs
src/middlewares/: mod.rs
src/migrations/: 001_initial.sql
src/models/: mod.rs
src/routes/: mod.rs
src/services/: mod.rs  transcription_service.rs  user_service.rs
src/utils/: mod.rs
