[package]
name = "ai-scribe"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4.4"
actix-multipart = "0.6"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT
jsonwebtoken = "9.2"

# Password hashing
argon2 = "0.5"

# Environment variables
dotenv = "0.15"

# Logging
env_logger = "0.10"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Whisper integration
whisper-rs = "0.10"

# File handling
tempfile = "3.8"

# Validation
validator = { version = "0.16", features = ["derive"] }

# CORS
actix-cors = "0.6"

# Config
config = "0.13"
futures-util = "0.3.31"
num_cpus = "1.17.0"
